PIC-2209 Improve logging to provide as much case information as possible for each event